--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // parse sdk
+    implementation 'com.parse.bolts:bolts-android:1.4.0'
+    implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.24.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
+
+    // for recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    // glide
+    // Glide for remote image loading
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    // swipe refresh layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
 }
