--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,8 @@ dependencies {
     // swipe refresh layout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 
+    // parceler
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
+
 }
