--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true" ><!--        for using http instead of https-->
-
+        android:usesCleartextTraffic="true">
+        <activity android:name=".PostDetails"></activity>
+        <!-- for using http instead of https -->
         <!-- declare file provider -->
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -26,15 +27,15 @@
         </provider>
 
         <activity android:name=".SignupActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PostStream"></activity>
-
+        <activity android:name=".PostStream" />
         <activity android:name=".MainActivity" />
     </application>
 
